# crm-sales-bot-fork

./: .dockerignore  .gitignore  .gitlab-ci.yml  DEPLOY.md  Dockerfile  Dockerfile.tei-local  NEXT_STEPS.md  README.md  check_1000_1100.py  check_category_router_accuracy.py  conftest.py  docker-compose.yaml  docker-entrypoint.sh  e2e_report.json  live_api_real_payload_e2e.py  pyproject.toml  reproduce_registry_issue.py  requirements.txt  run_full_simulation.sh  stress_test.py  test_analyzer_ollama.py  test_dialog.py  test_price_fix_e2e.py  test_registry.py  Архитектурный план.txt  Новая архитектура.txt  док по реакторингу.txt  принципы ручной комрессии  промпт для сжатия.compressed
28 client/: file (10).json  file (11).json  file (12).json  file (13).json  file (14).json  file (15).json  file (16).json  file (17).json  file (18).json  file (20).json  file (21).json  file (22).json  file (24).json  file (25).json  file (26).json  file (27).json  file (28).json  file (29).json  file (3).json  file (30).json  file (4).json  file (5).json  file (6).json  file (7).json  file (8).json  file (9).json
codebase_analyzer/: ARCHITECTURE_PLAN.md  __init__.py  config.py  main.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_HYBRID.md  ARCHITECTURE_UNIFIED_PLAN.md  CHANGELOG_69.md  CLASSIFIER.md  DAG.md  DEPLOYMENT.md  DESIGN_AUTONOMOUS_LLM_FLOW.md  DESIGN_PILOT_SURVEY_ROUTING.md  DESIGN_PRINCIPLES.md  INTEGRATION_SPEC.md  INTENT_TAXONOMY.md  KNOWLEDGE.md  LIVE_API_LAST_10_RUNS.md  MEDIA.md  OPS.md  PHASES.md  PLAN_CONTEXT_POLICY.md  PLAN_FULL_DIALOG_HISTORY_LAYER.md  QWEN3_14B_SETUP.md  SETTINGS.md  VOICE.md  state_machine.md
knowledge_extractor/: README.md  pyproject.toml
knowledge_extractor/docs/: e2e_test_results_qwen3_4b.txt
knowledge_extractor/knowledge_extractor/: __init__.py  __main__.py  cli.py  config.py
knowledge_extractor/knowledge_extractor/chunking/: __init__.py  base.py  qa_chunker.py  semantic_chunker.py  table_chunker.py
knowledge_extractor/knowledge_extractor/deduplication/: __init__.py  semantic_dedup.py
knowledge_extractor/knowledge_extractor/extraction/: __init__.py  extractor.py  keyword_generator.py  prompts.py  schemas.py  topic_generator.py
knowledge_extractor/knowledge_extractor/llm/: client.py
knowledge_extractor/knowledge_extractor/output/: __init__.py  category_router.py  meta_generator.py  yaml_writer.py
knowledge_extractor/knowledge_extractor/parsers/: __init__.py  base.py  docx_parser.py  excel_parser.py  messenger_parser.py  pdf_parser.py  qa_parser.py  txt_parser.py
knowledge_extractor/knowledge_extractor/validation/: __init__.py  quality_checker.py
logs/: .gitignore
reports/: .gitignore  e2e_simulation_log_20260201_165341.txt
results/: after_fix_full_report.txt  after_refactoring.json  after_refactoring_fix_round2.json  after_refactoring_fix_round3.json  after_refactoring_fix_round4.json  after_refactoring_fix_round5.json  after_refactoring_fix_round6.json  after_refactoring_fix_round7.json  after_refactoring_fix_round8.json  autonomous_tariff_dialogs_after_20260303_094233.json  autonomous_tariff_dialogs_after_llm_only_20260303_095836.json  autonomous_tariff_dialogs_before_20260303_093520.json  autonomous_tariff_dialogs_compare_20260303_094252.md  baseline_before_refactoring.json  baseline_config.txt  benchmark_frida_threshold.json  benchmark_keyword_cleanup.json  benchmark_new_format.json  benchmark_retrieval_ab.json  benchmark_retrieval_ab_report.md  benchmark_retrieval_stages.json  benchmark_retrieval_stages_output.txt  bug2_e2e_post_20260225_121010.json  bug2_e2e_post_20260225_121010.md  bug2_e2e_pre_20260225_120652.json  bug2_e2e_pre_20260225_120652.md  bug2_pre_post_compare_20260225.md  bug4_e2e_post_20260225_124833.json  bug4_e2e_post_20260225_124833.md  bug4_e2e_pre_20260225_124150.json  bug4_e2e_pre_20260225_124150.md  bug4_stress_20260225_125659.json  bug4_stress_20260225_125659.md  chat_audit_20260225_142513.json  chat_audit_20260225_143045.json  classifier_ctx_e2e_20260226_183846.json  compare_pre_vs_post1.md  context_memory_20260226_162259.json  context_memory_20260226_162259.md  ctx_enrichment_post2_20260227_112000.json  (+337 more)
scripts/: KNOWLEDGE_TEMPLATE.md  _analyze_trace.py  audit_state_machine.py  autonomous_tariff_dialogs.py  beauty_salon_autonomous_e2e.py  benchmark_frida_threshold.py  benchmark_keyword_cleanup.py  benchmark_new_format.py  benchmark_retrieval_ab.py  benchmark_retrieval_stages.py  bug4_e2e.py  bug4_stress.py  classifier_context_e2e.py  compare_embeddings.py  compare_rerankers.py  complex_consultative_e2e_20.py  context_enrichment_e2e.py  context_memory_test.py  deep_manual_audit_10.py  deflection_11_test.py  demo_hotel_complex.py  demo_hotel_style.py  diag_full_pipeline.py  diag_retrieval_6queries.py  dialog_generator.py  disambiguation_e2e.py  download_qwen3_14b.py  e2e_changelog69_audit.py  e2e_feedback_loop_check.py  e2e_full_pipeline_test.py  e2e_terminal_states.py  explicit_product_request_live_check.py  export_knowledge_to_yaml.py  few_shot_redesign_e2e.py  full_bot_stress_test.py  full_e2e_40.py  full_sim_e2e_40.py  generate_embedding_cache.py  generate_kb_questions.py  grad_temp_compare.py  (+70 more)
seo_rewriter/: README.md  pyproject.toml
seo_rewriter/src/seo_rewriter/: __init__.py  api.py  cli.py  config.py
seo_rewriter/src/seo_rewriter/llm/: __init__.py  ollama.py
seo_rewriter/src/seo_rewriter/plagiarism/: __init__.py  algorithms.py  detector.py  models.py
seo_rewriter/src/seo_rewriter/rewriter/: __init__.py  core.py  prompts.py
seo_rewriter/tests/: __init__.py  test_e2e.py
src/: __init__.py  api.py  apology_ssot.py  autonomous_profile_extractor.py  bot.py  classifier.py  config.py  config_loader.py  contact_payload_parser.py  context_envelope.py  context_window.py  conversation_guard.py  cta_generator.py  decision_trace.py  dialog_transcript.py  dialogue_policy.py  disambiguation_ui.py  extraction_ssot.py  factual_verifier.py  fallback_handler.py  feature_flags.py  frustration_thresholds.py  generator.py  generator_autonomous.py  history_compactor.py  immutable_types.py  import_aliases.py  (+24 more)
(+1184 files in other folders)
