[project]
name = "knowledge-extractor"
version = "0.1.0"
description = "CLI tool for generating YAML knowledge bases from unstructured documents"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # LLM
    "openai>=2.0.0",
    "outlines>=1.0.0",
    "pydantic>=2.10.0",

    # Document parsing
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "chardet>=5.2.0",

    # NLP
    "pymorphy3>=2.0.6",
    "sentence-transformers>=5.0.0",
    "scikit-learn>=1.6.0",

    # Utils
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
knowledge-extractor = "knowledge_extractor.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"
