[project]
name = "seo-rewriter"
version = "0.1.0"
description = "AI-powered SEO text rewriter with plagiarism detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "mmh3>=4.1.0",  # MurmurHash3 for SimHash
    "nltk>=3.8.0",  # For tokenization
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
seo-rewriter = "seo_rewriter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_rewriter"]
