[project]
name = "seo-rewriter"
version = "0.1.0"
description = "AI-powered SEO text rewriter with plagiarism detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mmh3>=5.0.0",  # MurmurHash3 for SimHash
    "nltk>=3.9.0",  # For tokenization
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
seo-rewriter = "seo_rewriter.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_rewriter"]
